--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next build && next export"
   },
   "dependencies": {
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "sharp": "^0.30.3"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "eslint": "8.11.0",
