--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "export": "next build && next export"
   },
   "dependencies": {
-    "next": "12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "^12.1.3",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "eslint": "8.11.0",
-    "eslint-config-next": "12.1.0",
-    "sass": "^1.49.9"
+    "eslint": "^8.12.0",
+    "eslint-config-next": "^12.1.3",
+    "sass": "^1.49.10"
   }
 }
