--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "export": "next build && next export"
   },
   "dependencies": {
-    "clsx": "^1.1.1",
-    "next": "^12.1.5",
+    "clsx": "^1.2.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "next": "^13.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-icons": "^4.3.1",
+    "react-icons": "^4.6.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
-    "eslint": "^8.13.0",
-    "eslint-config-next": "^12.1.5",
-    "sass": "^1.50.1"
+    "eslint": "^8.26.0",
+    "eslint-config-next": "^13.0.1",
+    "sass": "^1.55.0"
   }
 }
