--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.3",
-    "sass": "^1.62.1"
+    "sass": "^1.62.1",
+    "serve": "^14.2.1"
   }
 }
